css/style.css
img {
    width: 100%;
}

body {
    font-family: Inter, sans-serif;
}

a {
    text-underline: none;
    text-decoration: none;
}

section {
    margin: 15px 0;
    padding: 25px 0;
}

section:first-of-type{
    margin-top: 0;
}

section:last-of-type {
    margin-bottom: 0;
}

.allCaps {
    text-transform: uppercase;
}

/* Intro */
#Introduction {
    position: relative;
    padding-top: 0;
}

#Introduction .positioner {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#Introduction .positioner .introText {
    color: #ffffff;
    text-shadow: #000000 1px 1px 1px;
    text-align: end;
}

#Introduction .positioner .introText .currentPosition {
    margin: 10px 0;
    font-size: 18px;
}

#Introduction .positioner .linksContainer {
    margin: 25px 0;
    display: flex;
    flex-direction: row-reverse;
}

#Introduction .positioner .linksContainer .btn {
    border: 1px solid #efefef;
    color: #ffffff;
}

#Introduction .positioner .linksContainer a:last-of-type .btn {
    margin-right: 25px;
}

#Introduction .positioner .linksContainer .btn:hover {
    animation: fillDiv 300ms forwards;
    color: #000000;
}

#about .personality .socials {
    display: flex;
}

#about .personality .socials a div {
    font-size: 16px;
    background: rgb(243 244 246);
    padding: 7px;
    border-radius: 5px;
    color: #000000;
}

#about .personality .socials a:first-of-type div {
    margin-right: 15px;
}

#ExperienceAccordions {

}

#ExperienceAccordions .accordionItem {
    padding: 20px 25px;
    margin: 10px 0;
    border-radius: 25px;
    background: rgb(249 250 251);
    transition: ease-in-out 250ms;
}

#ExperienceAccordions .accordionItem:hover {
    box-shadow: 3px 3px 2px 1px #ab9f9f61;
}

#ExperienceAccordions .accordionItem .company {
    display: flex;
    flex-direction: row;
    flex-basis: available;
}

#ExperienceAccordions .accordionItem .company .logo {
    width: 25%;
    max-width: 100px;
    margin-right: 10px;
}

#ExperienceAccordions .accordionItem .company .details h5 {
    position: relative;
    width: fit-content;
}

#ExperienceAccordions .accordionItem .company h5::after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: -2px;
    left: 0;
    background-color: #000000;
    transition: ease-in-out 250ms;
}

#ExperienceAccordions .accordionItem:hover .company h5::after  {
    transform: scaleX(1);
}

#ExperienceAccordions .accordionItem .company .title {
    font-weight: 500;
}

#ExperienceAccordions .accordionItem .company .duration {
    color: rgb(138, 135, 135);
}

#ExperienceAccordions .accordionItem .responsibilities {
    height: 0;
    overflow: hidden;
    transition: ease-in-out 250ms;
}

#ExperienceAccordions .accordionItem .responsibilities ul {
    padding-left: 15px;
}

#ExperienceAccordions .accordionItem:hover .responsibilities {
    height: 250px;
    overflow-y: scroll;
    margin-top: 10px;
}

#education {
    background: rgb(249, 250, 251);
}

#education .educationItem {
    background: #ffffff;
    padding: 15px 20px;
    border-radius: 25px;
    visibility: hidden;
}

#education .educationItem .platformInfo {
    display: flex;
    margin-bottom: 10px;
}

#education .educationItem .platformInfo .icon {
    padding: 10px 15px;
    font-size: 26px;
    background: rgba(26, 35, 126, 0.1);
    margin-right: 10px;
    border-radius: 10px;
}

#education .educationItem .platformInfo .icon i {
    color: rgb(26, 35, 126);
}

#education .educationItem .platformInfo .details .name {
    margin-top: 5px;
    margin-bottom: 5px;
}

#education .educationItem .platformInfo .details .type {
    color: rgb(107, 114, 128);
}

#education .educationItem .courses {
    color: rgb(75, 85, 99);
    background: rgb(249, 250, 251);
    padding: 15px;
    border-radius: 20px;
    font-size: 15px;
    margin-bottom: 10px;
}

#education .educationItem .courses .courseName {
    color: #000;
    margin-bottom: 5px;
    font-size: 16px;
}

#education .educationItem .connect {
    color: rgb(26, 35, 126);
    background: rgba(26, 35, 126, 0.1);
    width: fit-content;
    padding: 10px 15px;
    border-radius: 10px;
    transition: ease-in-out 200ms;
}

#education .educationItem:hover .connect {
    color: #ffffff;
    background: rgb(26, 35, 126);
}

#skills .skillItem {
    margin-bottom: 5px;
}

#skills .skillItem .skillText {
    position: relative;
    width: 95%;
}

#skills .skillItem .skillText .skillName {
    max-width: 90%;
    line-height: 1.2;
}

#skills .skillItem .skillText .skillName span {
    font-size: 12px;
}

#skills .skillItem .skillText .skillMastery {
    position: absolute;
    top: 0;
    right: -5%;
}

#skills .skillItem .visualisation, #skills .skillItem .visualisation .filler {
    height: 8px;
    border-radius: 5px;
}

#skills .skillItem .visualisation {

    width: 100%;
    background: #efefef;
    margin-top: 5px;
    position: relative;
}

#skills .skillItem .visualisation .filler {
    width: 0;
    background: #000000;
    transition: ease-in-out 2s;
}

#skills #frontendTech .filler {
    background-color: rgb(87, 181, 231);
}

#skills #backendTech .filler {
    background: rgb(141, 211, 199);
}

#skills #databaseTech .filler {
    background: rgb(251, 146, 60);
}

#game {
    background: rgb(249, 250, 251);
}

#startGame {
    border: 2px solid #000000;
    padding: 10px 15px;
    cursor: pointer;
    margin-bottom: 25px;
    background: #ffffff;
    transition: ease-in-out 150ms;
}

#startGame:hover {
    background: #efefef;
    transform: scale(1.2);
}

#catAndMouse {
    border: 1px solid #000;
}

#theBoard {
    display: flex;
    position: relative;
    justify-content: center;
}

#theBoard .feedback {
    margin-left: 15px;
    text-align: end;
}

#theBoard .feedback span {
    font-weight: bold;
}

#theBoard .gameOver {
    display: none;
    position: absolute;
    top: 25%;
    left: 25%;
    background: #ffffff;
    border: 1px dotted #efefef;
    padding: 25px;
}

#theBoard .gameOver p {
    margin-bottom: 3px;
}

#theBoard .gameOver h6 {
    text-align: center;
    font-size: 20px;
}

#theBoard .gameOver.show {
    display: block;
}

#totalScore {
    font-weight: bold;
}

#game .mobileNote {
    display: none;
    text-align: center;
}

@keyframes fillDiv {
    0% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.0) 0%, rgba(255, 255, 255, 0.0) 100%);
    }
    5% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.05) 5%, rgba(255, 255, 255, 0.0) 100%);
    }
    10% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.1) 10%, rgba(255, 255, 255, 0.0) 100%);
    }
    15% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.15) 15%, rgba(255, 255, 255, 0.0) 100%);
    }
    20% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0.0) 100%);
    }
    25% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.25) 25%, rgba(255, 255, 255, 0.0) 100%);
    }
    30% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3) 30%, rgba(255, 255, 255, 0.0) 100%);
    }
    35% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.35) 35%, rgba(255, 255, 255, 0.0) 100%);
    }
    40% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.4) 40%, rgba(255, 255, 255, 0.0) 100%);
    }
    45% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.45) 45%, rgba(255, 255, 255, 0.0) 100%);
    }
    50% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0.0) 100%);
    }
    55% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.55) 55%, rgba(255, 255, 255, 0.0) 100%);
    }
    60% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.6) 60%, rgba(255, 255, 255, 0.0) 100%);
    }
    65% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.65) 65%, rgba(255, 255, 255, 0.0) 100%);
    }
    70% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.7) 70%, rgba(255, 255, 255, 0.0) 100%);
    }
    75% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.75) 75%, rgba(255, 255, 255, 0.0) 100%);
    }
    80% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.8) 80%, rgba(255, 255, 255, 0.0) 100%);
    }
    85% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.85) 85%, rgba(255, 255, 255, 0.0) 100%);
    }
    90% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 90%, rgba(255, 255, 255, 0.0) 100%);
    }
    95% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.95) 95%, rgba(255, 255, 255, 0.0) 100%);
    }
    100% {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 1.0) 100%, rgba(255, 255, 255, 0.0) 100%);
    }
}

@media (pointer: coarse) {
    #game .theGame {
        display: none;
    }

    #game .mobileNote {
        display: block;
    }
}

@media screen and (max-width: 992px) {
    #ExperienceAccordions .accordionItem .responsibilities {
        height: 100%;
    }

    #education .educationItem {
        margin-bottom: 25px;
    }

    #skills .col-md-6 {
        margin-bottom: 25px;
    }

    #Introduction .positioner .linksContainer .btn {
        background: #ffffffcf;
        color: #000000;
    }
}

